--- a/index.html
+++ b/index.html
@@ -9,20 +9,11 @@
   <style>
     body { font-family: 'Noto Sans TC', 'Microsoft JhengHei', Arial, sans-serif; margin: 1em; }
     h2 { text-align: center; margin-bottom: 0.5em; }
-    #filter-bar {
-      display: flex; justify-content: center; align-items: center;
-      margin-bottom: 1em;
-      font-size: 1.4em;
-    }
-    #courseSelect {
-      margin-left: 0.5em;
-      padding: 0.4em 1em;
-      font-size: 1.1em;
-    }
+    #filter-bar { display: flex; justify-content: center; align-items: center; margin-bottom: 1em; font-size: 1.4em;}
+    #courseSelect { margin-left: 0.5em; padding: 0.4em 1em; font-size: 1.1em;}
     #calendar { max-width: 1100px; margin: auto; }
     .fc-daygrid-event-dot { display: none; }
-    .fc-daygrid-event .fc-event-title,
-    .fc-timegrid-event .fc-event-title {
+    .fc-daygrid-event .fc-event-title, .fc-timegrid-event .fc-event-title {
       white-space: pre-line !important;
       font-weight: bold;
       font-size: 1.06em;
@@ -40,28 +31,18 @@
       margin-right: 2px;
       vertical-align: middle;
     }
-    /* 異動資料紅色加粗 */
-    .highlight-red {
-      color: #C00000 !important;
-      font-weight: bold !important;
-    }
+    .highlight-red { color: #C00000 !important; font-weight: bold !important;}
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
-      border: 1px solid #aaa; padding: 0.5em; text-align: center;
-      font-size: 1.08em;
+      border: 1px solid #aaa; padding: 0.5em; text-align: center; font-size: 1.08em;
     }
-    #list-container th {
-      background: #f4f4f4;
-      font-size: 1.13em;
-    }
+    #list-container th { background: #f4f4f4; font-size: 1.13em;}
     @media (max-width: 800px) {
       #calendar, #list-container { width: 100%; font-size: 0.96em;}
       #filter-bar { font-size: 1.1em;}
     }
-    .fc-event, .fc-event-title, .fc-timegrid-event .fc-event-title, .fc-daygrid-event .fc-event-title {
-      color: #222 !important;
-    }
+    .fc-event, .fc-event-title, .fc-timegrid-event .fc-event-title, .fc-daygrid-event .fc-event-title { color: #222 !important; }
   </style>
 </head>
 <body>
@@ -78,12 +59,7 @@
 <script>
 const apiUrl = "https://script.google.com/macros/s/AKfycbxbpuFcInB-xFFGSVJReKEbp2DE5k8mDs8aKx80o94_fICApzgZ7_RI-j2kbDikG0jo/exec";
 
-// 判斷異動：只要有異動欄位就直接只顯示異動資料
-function useChanged(item) {
-  return item["異動日期"] || item["異動起始時間"] || item["異動結束時間"] || item["異動教室"];
-}
-
-// 格式修正
+// 標準化格式
 function fixDate(dateStr) {
   if (!dateStr) return "";
   if (dateStr.startsWith("1899") || dateStr.startsWith("Invalid")) return "";
@@ -114,72 +90,6 @@ function courseSortKey(courseName) {
   if (match) n = {一:1,二:2,三:3}[match[1]];
   return n + courseName;
 }
-let allData = [];
-let calendar = null;
-
-// 過濾重覆（只顯示異動後資料，不顯示原始資料）
-function getFilteredData(data) {
-  // 若同一組課程(課程名稱、教師、教室、日期、起始、結束)有異動，則只保留異動的那筆
-  // 以「異動日期+課程名稱+教師」為 key
-  const existed = new Set();
-  const result = [];
-  for (let item of data) {
-    const isChanged = useChanged(item);
-    let key = "";
-    if (isChanged) {
-      key = [
-        fixDate(item["異動日期"]),
-        getCourseLabel(item),
-        (item["教師"]||"")
-      ].join("|");
-      existed.add(key);
-      result.push(item); // 直接放入異動筆
-    }
-  }
-  for (let item of data) {
-    if (useChanged(item)) continue; // 異動資料已處理
-    let key = [
-      fixDate(item["日期"]),
-      getCourseLabel(item),
-      (item["教師"]||"")
-    ].join("|");
-    if (!existed.has(key)) {
-      result.push(item);
-    }
-  }
-  return result;
-}
-
-document.addEventListener('DOMContentLoaded', async function () {
-  const res = await fetch(apiUrl);
-  const data = await res.json();
-  allData = data;
-
-  // 使用只保留異動後的資料
-  const filteredData = getFilteredData(data);
-
-  const courses = [...new Set(filteredData.map(item => getCourseLabel(item)))].sort((a, b) => {
-    return courseSortKey(a) > courseSortKey(b) ? 1 : -1;
-  });
-  const select = document.getElementById('courseSelect');
-  courses.forEach(c => {
-    const opt = document.createElement('option');
-    opt.value = c;
-    opt.textContent = c;
-    select.appendChild(opt);
-  });
-
-  renderCalendar(filteredData);
-  renderList(filteredData);
-
-  select.addEventListener('change', function () {
-    const value = this.value;
-    const filtered = (!value) ? filteredData : filteredData.filter(item => getCourseLabel(item) === value);
-    renderCalendar(filtered);
-    renderList(filtered);
-  });
-});
-
 function getCourseLabel(item) {
   return item["課程名稱"].replace(/\s+/g, ' ').trim();
 }
@@ -210,26 +120,126 @@ function getCourseStatus(courseName, eventDate, allData) {
     return { icon: "🟡", color: "#f7b731", label: "進行中已達1/3" };
   }
 }
+
+// 決定該筆是否為異動筆：只有異動日期才是新事件，其他異動只強調欄位不移動主鍵
+function isRealChangedRow(item) {
+  return item["異動日期"];
+}
+
+// 將所有原始資料合成（僅有異動日期才移除原事件，其他異動僅強調顏色）
+function getMergedData(data) {
+  // 先建立 key
+  // key = 課程名稱 + 教師 + 原日期 or 異動日期
+  const dataMap = {};
+  data.forEach(item => {
+    // 優先異動日期，否則用原日期
+    const date = fixDate(item["異動日期"] || item["日期"]);
+    const key = [
+      getCourseLabel(item),
+      item["教師"]||"",
+      date
+    ].join("|");
+    // 只存最新異動的資料，否則原始
+    // 若該日期有異動資料，就存異動
+    if (item["異動日期"]) {
+      dataMap[key] = {
+        ...item,
+        __isDateChanged: true // 標註此筆異動日期
+      };
+    } else if (!dataMap[key]) {
+      dataMap[key] = {
+        ...item,
+        __isDateChanged: false
+      };
+    }
+  });
+  // 過濾掉所有異動日期來源的舊資料
+  // 若有一筆異動日期為X，則同課程+教師+原本日期那筆要排除
+  const excludedKeys = new Set();
+  data.forEach(item => {
+    if (item["異動日期"]) {
+      const oriKey = [
+        getCourseLabel(item),
+        item["教師"]||"",
+        fixDate(item["日期"])
+      ].join("|");
+      excludedKeys.add(oriKey);
+    }
+  });
+  // 產生最終顯示清單
+  return Object.entries(dataMap)
+    .filter(([key, row]) => !excludedKeys.has(key) || row.__isDateChanged)
+    .map(([key, row]) => row);
+}
+
+let allData = [];
+let calendar = null;
+
+document.addEventListener('DOMContentLoaded', async function () {
+  const res = await fetch(apiUrl);
+  const data = await res.json();
+  allData = data;
+
+  // 真正合併後只保留要顯示的資料
+  const mergedData = getMergedData(data);
+
+  const courses = [...new Set(mergedData.map(item => getCourseLabel(item)))].sort((a, b) => {
+    return courseSortKey(a) > courseSortKey(b) ? 1 : -1;
+  });
+  const select = document.getElementById('courseSelect');
+  courses.forEach(c => {
+    const opt = document.createElement('option');
+    opt.value = c;
+    opt.textContent = c;
+    select.appendChild(opt);
+  });
+
+  renderCalendar(mergedData);
+  renderList(mergedData);
+
+  select.addEventListener('change', function () {
+    const value = this.value;
+    const filtered = (!value) ? mergedData : mergedData.filter(item => getCourseLabel(item) === value);
+    renderCalendar(filtered);
+    renderList(filtered);
+  });
+});
+
+// 只要異動該欄位才紅字強調
+function fieldClass(item, field) {
+  if (field === '日期')    return item["異動日期"]    ? "highlight-red" : "";
+  if (field === '起始時間')return item["異動起始時間"]? "highlight-red" : "";
+  if (field === '結束時間') return item["異動結束時間"] ? "highlight-red" : "";
+  if (field === '教室')    return item["異動教室"]    ? "highlight-red" : "";
+  return "";
+}
+function getClass(item) {
+  const result = [];
+  if (Number(item["當前堂數"]) >= Math.ceil(Number(item["總堂數"]) / 3)) result.push("critical");
+  return result;
+}
 function renderCalendar(data) {
   const events = data.map(item => {
-    const isChanged = useChanged(item);
-    const date = fixDate(isChanged ? item["異動日期"] : item["日期"]);
-    const startTime = fixTime(isChanged ? item["異動起始時間"] : item["起始時間"]);
-    const endTime = fixTime(isChanged ? item["異動結束時間"] : item["結束時間"]);
+    const date = fixDate(item["異動日期"] || item["日期"]);
+    const startTime = fixTime(item["異動起始時間"] || item["起始時間"]);
+    const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const course = getCourseLabel(item);
     const status = getCourseStatus(course, date, allData);
     const bgColor = getColorByName(item["課程名稱"]);
-    const classroom = isChanged ? (item["異動教室"] || item["教室"] || "") : (item["教室"] || "");
-    // span 標記課名和教室紅字
-    const courseLabel = `<span class="${isChanged?'highlight-red':''}">${course}</span>`;
-    const classroomLabel = `<span class="${isChanged?'highlight-red':''}">${classroom}</span>`;
-    const title = `${course}\n${startTime}-${endTime} ${item["教師"] ? item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
+    const classroom = item["異動教室"] || item["教室"] || "";
+    // 強調該異動欄紅字
+    let courseDisplay = `<span>${course}</span>`;
+    let classroomDisplay = `<span class="${fieldClass(item, "教室")}">${classroom}</span>`;
+    let dateDisplay = `<span class="${fieldClass(item, "日期")}">${date}</span>`;
+    let timeDisplay = `<span class="${fieldClass(item, "起始時間")}">${startTime}</span>-<span class="${fieldClass(item, "結束時間")}">${endTime}</span>`;
+    // 日曆事件內容
+    const title = `${course}\n${startTime}-${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
     return {
-      title: title, // 原本title文字，真正顏色在 eventDidMount 插入
+      title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: (isChanged ? ['changed'] : []).concat(getClass(item)),
-      extendedProps: { ...item, bg: bgColor, statusIcon: status.icon, statusLabel: status.label, isChanged: isChanged, course, classroom }
+      classNames: [].concat(getClass(item)),
+      extendedProps: { ...item, bg: bgColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
     };
   });
   if (calendar) calendar.destroy();
@@ -259,28 +269,33 @@ function renderCalendar(data) {
         titleNode.prepend(iconNode);
       }
       info.el.style.backgroundColor = info.event.extendedProps.bg;
-      // 異動資料的課名、教室紅色加粗
-      if (info.event.extendedProps.isChanged) {
-        // 課名改紅
-        if (titleNode) {
-          titleNode.innerHTML = `<span class="highlight-red">${info.event.extendedProps.course}</span>` +
-            titleNode.innerHTML.replace(info.event.extendedProps.course, "");
-          // 教室在換行時也要紅
-          let txt = titleNode.innerHTML.replace(info.event.extendedProps.classroom, `<span class="highlight-red">${info.event.extendedProps.classroom}</span>`);
-          titleNode.innerHTML = txt;
-        }
-        info.el.style.color = '#C00000';
-        info.el.style.setProperty('color', '#C00000', 'important');
-        info.el.style.fontWeight = "bold";
-      } else {
-        info.el.style.color = "#222";
-        info.el.style.setProperty('color', '#222', 'important');
-        info.el.style.fontWeight = "bold";
-      }
+      info.el.style.color = "#222";
+      info.el.style.fontWeight = "bold";
       info.el.style.borderRadius = "7px";
       info.el.style.border = "none";
       info.el.title = info.event.extendedProps.statusLabel;
       info.el.style.height = "auto";
+      // 針對需要紅字欄位加強
+      // 課名
+      if (info.event.extendedProps["異動日期"] || info.event.extendedProps["異動起始時間"] || info.event.extendedProps["異動結束時間"] || info.event.extendedProps["異動教室"]) {
+        if (titleNode) {
+          let html = titleNode.innerHTML;
+          if (info.event.extendedProps["異動教室"]) {
+            html = html.replace(info.event.extendedProps["classroom"], `<span class="highlight-red">${info.event.extendedProps["classroom"]}</span>`);
+          }
+          if (info.event.extendedProps["異動日期"]) {
+            html = html.replace(info.event.extendedProps["日期"], `<span class="highlight-red">${info.event.extendedProps["異動日期"]}</span>`);
+          }
+          if (info.event.extendedProps["異動起始時間"]) {
+            html = html.replace(info.event.extendedProps["起始時間"], `<span class="highlight-red">${info.event.extendedProps["異動起始時間"]}</span>`);
+          }
+          if (info.event.extendedProps["異動結束時間"]) {
+            html = html.replace(info.event.extendedProps["結束時間"], `<span class="highlight-red">${info.event.extendedProps["異動結束時間"]}</span>`);
+          }
+          // 預防沒修正到的還是用預設色
+          titleNode.innerHTML = html;
+        }
+      }
       titleNode && (titleNode.style.whiteSpace = "pre-line");
     }
   });
@@ -288,10 +303,8 @@ function renderCalendar(data) {
 }
 function renderList(data) {
   const sorted = [...data].sort((a, b) => {
-    let da = useChanged(a) ? a["異動日期"] : a["日期"];
-    let db = useChanged(b) ? b["異動日期"] : b["日期"];
-    da = fixDate(da);
-    db = fixDate(db);
+    let da = fixDate(a["異動日期"] || a["日期"]);
+    let db = fixDate(b["異動日期"] || b["日期"]);
     return da > db ? 1 : da < db ? -1 : 0;
   });
   let html = `<table>
@@ -306,31 +319,29 @@ function renderList(data) {
     <th>備註</th>
   </tr>`;
   for (let item of sorted) {
-    const isChanged = useChanged(item);
-    const date = fixDate(isChanged ? item["異動日期"] : item["日期"]);
-    const startTime = fixTime(isChanged ? item["異動起始時間"] : item["起始時間"]);
-    const endTime = fixTime(isChanged ? item["異動結束時間"] : item["結束時間"]);
-    const classroom = isChanged ? (item["異動教室"] || item["教室"] || "") : (item["教室"] || "");
+    const date = fixDate(item["異動日期"] || item["日期"]);
+    const startTime = fixTime(item["異動起始時間"] || item["起始時間"]);
+    const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
+    const classroom = item["異動教室"] || item["教室"] || "";
     const course = getCourseLabel(item);
     const status = getCourseStatus(course, date, data);
     html += `<tr>
       <td style="font-size:1.3em;">${status.icon}</td>
-      <td>${date}</td>
-      <td>${startTime}-${endTime}</td>
-      <td class="${isChanged ? 'highlight-red' : ''}">${course}</td>
+      <td class="${fieldClass(item, "日期")}">${date}</td>
+      <td>
+        <span class="${fieldClass(item, "起始時間")}">${startTime}</span>
+        -
+        <span class="${fieldClass(item, "結束時間")}">${endTime}</span>
+      </td>
+      <td>${course}</td>
       <td>${item["教師"]||""}</td>
-      <td class="${isChanged ? 'highlight-red' : ''}">${classroom}</td>
+      <td class="${fieldClass(item, "教室")}">${classroom}</td>
       <td>${item["當前堂數"]||""}/${item["總堂數"]||""}</td>
       <td>${item["備註"]||""}</td>
     </tr>`;
   }
   html += `</table>`;
   document.getElementById('list-content').innerHTML = html;
-}
-function getClass(item) {
-  const result = [];
-  if (Number(item["當前堂數"]) >= Math.ceil(Number(item["總堂數"]) / 3)) result.push("critical");
-  return result;
 }
 </script>
 </body>
