--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
       vertical-align: middle;
     }
     .highlight-red { color: #C00000 !important; font-weight: bold !important;}
+    .muted-bg {
+      background: #888 !important;
+      color: #fff !important;
+    }
+    .muted-table {
+      background: #aaa !important;
+      color: #fff !important;
+    }
+    .muted-label {
+      color: #fff !important;
+      font-weight: bold;
+      background: #888 !important;
+      border-radius: 4px;
+      padding: 0 2px;
+      margin-left: 0.5em;
+    }
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
@@ -59,7 +75,6 @@
 <script>
 const apiUrl = "https://script.google.com/macros/s/AKfycbxbpuFcInB-xFFGSVJReKEbp2DE5k8mDs8aKx80o94_fICApzgZ7_RI-j2kbDikG0jo/exec";
 
-// 標準化日期格式
 function fixDate(dateStr) {
   if (!dateStr) return "";
   if (dateStr.startsWith("1899") || dateStr.startsWith("Invalid")) return "";
@@ -120,7 +135,6 @@ function getCourseStatus(courseName, eventDate, allData) {
     return { icon: "🟡", color: "#f7b731", label: "進行中已達1/3" };
   }
 }
-// 只要異動該欄位才紅字強調
 function fieldClass(item, field) {
   if (field === '日期')    return item["異動日期"]    ? "highlight-red" : "";
   if (field === '起始時間')return item["異動起始時間"]? "highlight-red" : "";
@@ -134,63 +148,71 @@ function getClass(item) {
   return result;
 }
 
-// ★★★ 修正版合併異動，只留最新異動（原本日期一定消失） ★★★
+// 修正版：合併異動資料，原日期保留但標註灰底白字【已異動】
 function mergeAndRenumber(data) {
-  // 以課程名稱+教師分組
   const groups = {};
   data.forEach(item => {
     const key = getCourseLabel(item) + '|' + (item["教師"]||"");
     if (!groups[key]) groups[key] = [];
     groups[key].push(item);
   });
-
   const allRows = [];
   Object.values(groups).forEach(group => {
-    // 1. 建立「原始日期被異動」的 map，記錄原始日期→最新異動後的資料
-    const replacedMap = new Map(); // 原始日期 -> 異動資料
+    // 異動日期覆蓋的原始日期集合
+    const replacedDateSet = new Set();
     group.forEach(item => {
       if (item["異動日期"]) {
-        const originDate = fixDate(item["日期"]);
-        const targetDate = fixDate(item["異動日期"]);
-        // 原始那天消失，顯示異動後那天
-        replacedMap.set(originDate, null);  // 標記原始被覆蓋
-        replacedMap.set(targetDate, { ...item, __displayDate: targetDate }); // 只留異動後那天
+        replacedDateSet.add(fixDate(item["日期"]));
       }
     });
-
-    // 2. 沒有異動的原始資料加入（被異動掉的就跳過）
+    let processed = [];
     group.forEach(item => {
-      if (!item["異動日期"]) {
-        const date = fixDate(item["日期"]);
-        if (!replacedMap.has(date)) {
-          replacedMap.set(date, { ...item, __displayDate: date });
+      if (item["異動日期"]) {
+        let clone = { ...item };
+        clone.__displayDate = fixDate(item["異動日期"]);
+        clone.__muted = false;
+        processed.push(clone);
+      } else {
+        const thisDate = fixDate(item["日期"]);
+        if (replacedDateSet.has(thisDate)) {
+          // 原始被異動掉 → 淺灰底白字【已異動】
+          let clone = { ...item };
+          clone.__displayDate = thisDate;
+          clone.__muted = true;
+          processed.push(clone);
+        } else {
+          let clone = { ...item };
+          clone.__displayDate = thisDate;
+          clone.__muted = false;
+          processed.push(clone);
         }
       }
     });
-
-    // 3. 收集所有剩下的（不為null），按__displayDate排序、堂次重排
-    const filtered = [];
-    replacedMap.forEach(v => { if (v) filtered.push(v); });
-    filtered.sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
-    const total = filtered.length;
-    filtered.forEach((item, idx) => {
-      item.__showIdx = idx + 1;
-      item.__showTotal = total;
+    // 按__displayDate排序，重編堂次
+    processed.sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+    let n = 1;
+    processed.forEach(item => {
+      // 【被異動的舊資料不列入堂次計算】
+      if (!item.__muted) {
+        item.__showIdx = n++;
+      } else {
+        item.__showIdx = "-";
+      }
+    });
+    processed.forEach(item => {
+      item.__showTotal = n-1;
       allRows.push(item);
     });
   });
-  // 全部依日期排序
-  return allRows.sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+  // 依日期全排序
+  return allRows.sort((a,b) => a.__displayDate.localeCompare(b.__displayDate));
 }
-
 let allData = [];
 let calendar = null;
 document.addEventListener('DOMContentLoaded', async function () {
   const res = await fetch(apiUrl);
   const data = await res.json();
   allData = data;
-
-  // 堂次自動重排
   const merged = mergeAndRenumber(data);
 
   const courses = [...new Set(merged.map(item => getCourseLabel(item)))].sort((a, b) => {
@@ -222,15 +244,16 @@ function renderCalendar(data) {
     const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const course = getCourseLabel(item);
     const status = getCourseStatus(course, date, allData);
-    const bgColor = getColorByName(item["課程名稱"]);
+    const bgColor = item.__muted ? "#888" : getColorByName(item["課程名稱"]);
+    const fgColor = item.__muted ? "#fff" : "#222";
     const classroom = item["異動教室"] || item["教室"] || "";
-    let title = `${course}\n${startTime} - ${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
+    let title = `${course}${item.__muted ? "【已異動】" : ""}\n${startTime} - ${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
     return {
       title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: [].concat(getClass(item)),
-      extendedProps: { ...item, bg: bgColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
+      classNames: [].concat(getClass(item)).concat(item.__muted ? ["muted-bg"] : []),
+      extendedProps: { ...item, bg: bgColor, fg: fgColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
     };
   });
   if (calendar) calendar.destroy();
@@ -260,12 +283,17 @@ function renderCalendar(data) {
         titleNode.prepend(iconNode);
       }
       info.el.style.backgroundColor = info.event.extendedProps.bg;
-      info.el.style.color = "#222";
+      info.el.style.color = info.event.extendedProps.fg;
       info.el.style.fontWeight = "bold";
       info.el.style.borderRadius = "7px";
       info.el.style.border = "none";
       info.el.title = info.event.extendedProps.statusLabel;
       info.el.style.height = "auto";
+      if (info.event.extendedProps.__muted) {
+        info.el.classList.add("muted-bg");
+        info.el.style.backgroundColor = "#888";
+        info.el.style.color = "#fff";
+      }
       // 紅字強調
       if (info.event.extendedProps["異動教室"] && info.event.extendedProps["教室"]) {
         titleNode.innerHTML = titleNode.innerHTML.replace(
@@ -309,15 +337,16 @@ function renderList(data) {
     const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const classroom = item["異動教室"] || item["教室"] || "";
     const course = getCourseLabel(item);
-    html += `<tr>
+    let rowClass = item.__muted ? "muted-table" : "";
+    html += `<tr class="${rowClass}">
       <td style="font-size:1.3em;">🟡</td>
-      <td class="${fieldClass(item, "日期")}">${date}</td>
+      <td class="${fieldClass(item, "日期")}">${date}${item.__muted ? '<span class="muted-label">已異動</span>' : ""}</td>
       <td>
         <span class="${fieldClass(item, "起始時間")}">${startTime}</span>
         -
         <span class="${fieldClass(item, "結束時間")}">${endTime}</span>
       </td>
-      <td>${course}</td>
+      <td>${course}${item.__muted ? '<span class="muted-label">已異動</span>' : ""}</td>
       <td>${item["教師"]||""}</td>
       <td class="${fieldClass(item, "教室")}">${classroom}</td>
       <td>${item.__showIdx}/${item.__showTotal}</td>
